# pricepoint-intel

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
data/sample/: distribution_centers.csv  markets.csv  skus.csv  vendor_pricing.csv  vendors.csv
frontend/: next.config.js  package.json
frontend/components/: PricingHeatmap.tsx  PromoCalibrationSlider.tsx  SKUSearch.tsx  VendorMatrix.tsx  index.ts
frontend/types/: index.ts
pricepoint_intel/: __init__.py
pricepoint_intel/api/: __init__.py  app.py  ingestion_routes.py
pricepoint_intel/api_layer/: __init__.py
pricepoint_intel/api_layer/export_engine/: __init__.py  engine.py
pricepoint_intel/api_layer/query_interface/: __init__.py  interface.py
pricepoint_intel/api_layer/webhook_alerts/: __init__.py  manager.py
pricepoint_intel/dashboard/: __init__.py  app.py
pricepoint_intel/data_sources/: __init__.py
pricepoint_intel/data_sources/financial_scraping/: __init__.py  client.py
pricepoint_intel/data_sources/market_data/: __init__.py  client.py
pricepoint_intel/data_sources/public_records/: __init__.py  client.py  sam_gov.py  sec_edgar.py
pricepoint_intel/data_sources/relationship_mapping/: __init__.py  mapper.py
pricepoint_intel/data_sources/vendor_apis/: __init__.py  client.py
pricepoint_intel/database/: __init__.py  connection.py  models.py
pricepoint_intel/geospatial/: __init__.py  risk_framework.py
pricepoint_intel/ingestion/: __init__.py  api_connector.py  csv_importer.py  validators.py
pricepoint_intel/intelligence_engine/: __init__.py  core.py
pricepoint_intel/intelligence_engine/cost_benchmarking/: __init__.py  benchmarker.py
pricepoint_intel/intelligence_engine/predictive_models/: __init__.py  forecaster.py
pricepoint_intel/intelligence_engine/price_normalization/: __init__.py  normalizer.py
pricepoint_intel/intelligence_engine/sku_matcher/: __init__.py  matcher.py
pricepoint_intel/intelligence_engine/vendor_discovery/: __init__.py  discoverer.py
pricepoint_intel/models/: __init__.py  results.py  schemas.py
pricepoint_intel/visualization/: __init__.py
pricepoint_intel/visualization/comparative_tools/: __init__.py  viz.py
pricepoint_intel/visualization/geographic_pricing/: __init__.py  viz.py
pricepoint_intel/visualization/trend_analysis/: __init__.py  viz.py
pricepoint_intel/visualization/vendor_networks/: __init__.py  viz.py
scripts/: generate_sample_data.py
tests/: __init__.py  conftest.py  test_api.py  test_data_ingestion.py  test_intelligence_engine.py  test_predictive_models.py  test_sku_matcher.py
